# -bazel_node_typescript

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: test.yaml
app/: BUILD.bazel  app.ts  main.test.ts  main.ts
common/: BUILD.bazel  index.test.ts  index.ts
