load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@bazel_skylib//lib:partial.bzl", "partial")
load("@aspect_rules_jest//jest:defs.bzl", "jest_test")

ts_project(
    name = "common_project",
    srcs = glob(
        include = ["*.ts"],
        exclude = ["*.test.ts"],
    ),
    declaration = True,
    transpiler = partial.make(
        swc,
        swcrc = "//:swcrc",
    ),
    tsconfig = "//:tsconfig",
)

ts_project(
    name = "common_project_test",
    srcs = glob(["*.test.ts"]),
    declaration = True,
    transpiler = partial.make(
        swc,
        swcrc = "//:swcrc",
    ),
    tsconfig = "//:tsconfig",
    deps = [
        ":common_project",
        "//:node_modules/@types/jest",
    ],
)

jest_test(
    name = "test",
    config = "//:jest.config",
    data = [
        ":common_project_test",
    ],
    node_modules = "//:node_modules",
)

npm_package(
    name = "common",
    srcs = [":common_project"],
    package = "@org/common",
    visibility = ["//visibility:public"],
)
